bloonix-webgui (0.14) released at 2014-12-03

    * Fixed parsing nagios argument list.
    * Fixed html injection in the wtrm command list.
    * Fixed the wtrm function checkUrl.

bloonix-webgui (0.13) released at 2014-12-03

    * Added config parameter allow_simple_username, which allows
      simple usernames like "joe" instead of email addresses.

bloonix-webgui (0.12) released at 2014-12-01

    * Fixed "undefined is not a function".

bloonix-webgui (0.11) released at 2014-11-30

    * Services can be cloned now to the same or other hosts.
    * Changed the icon to clone templates.
    * Changed the icon to clone dashboards.

bloonix-webgui (0.10) released at 2014-11-26

    * Fixed WTRM error messages if the WTRM feature is not
      available. Now only a small info box is shown.

bloonix-webgui (0.9) released at 2014-11-25

    * Fixed js error 'fillkey is not defined'.
    * Admins can now see only contacts, contactgroups and
      timeperiods from they own company.

bloonix-webgui (0.8) released at 2014-11-23

    * New doc: how does bloonix checks hosts and services
    * Replaced d3js, datamaps and topojson with jqvmap.

bloonix-webgui (0.7) released at 2014-11-22

    * Fixed undefined value.
    * Template name is shown if the icon is hovered.
    * Fixed dashlet configure button.

bloonix-webgui (0.6) released at 2014-11-18

    * Fixed missing wtrm configuration.

bloonix-webgui (0.5) released at 2014-11-17

    * Added preset 14d, 30d, 60d, 90d to the chart selection.
    * Modified the mail format for uses that logged in.
    * Added a loading div to the service table within the host view.
    * Removed a test key to the wtrm configuration and replaced it
      with variables.
    * Fixed lang issues... the cookie is not deleted any more if
      the user logged out.

bloonix-webgui (0.4) released at 2014-11-08

    * Fixed missed /plugins/search route.
    * Fixed the width of the table of search results
      of /plugins/search.