@@ -1,3 +1,7 @@
+bloonix-webgui (0.15) released at 2014-12-04
+
+    * Fixed host list offset and limit for template groups.
+
 bloonix-webgui (0.14) released at 2014-12-03
 
     * Fixed parsing nagios argument list.
